[package]
name = "unbound-sys"
version = "0.5.0"
authors = ["Andrew Tunnell-Jones <andrew@tj.id.au>"]
license = "BSD-3-Clause"
description = "FFI bindings to libunbound"
documentation = "https://docs.rs/unbound-sys"
homepage = "https://github.com/andrewtj/rust-unbound"
repository = "https://github.com/andrewtj/rust-unbound"
readme = "README.md"
build = "build.rs"
links = "unbound"

[dependencies]
openssl = "0.9"
libc = "0.2"

[build-dependencies]
tempdir = "0.3.5"
gcc = "0.3.51"
