[package]
name = "unbound-sys"
version = "0.6.0"
authors = ["Andrew Tunnell-Jones <andrew@tj.id.au>"]
license = "BSD-3-Clause"
description = "FFI bindings to libunbound"
documentation = "https://docs.rs/unbound-sys"
repository = "https://github.com/andrewtj/rust-unbound"
readme = "README.md"
build = "build.rs"
links = "unbound"

[dependencies]
libc = "0.2"
openssl = "0.10"

[build-dependencies]
cc = "1.0"
tempdir = "0.3.5"

[features]
ub_ctx_set_stub = []
ub_ctx_add_ta_autr = []
ub_ctx_set_tls = []
