[package]
name = "unbound"
version = "0.6.0"
authors = ["Andrew Tunnell-Jones <andrew@tj.id.au>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Wraps libunbound; an implementation of a DNS resolver including cache and DNSSEC validation."
documentation = "https://docs.rs/unbound"
repository = "https://github.com/andrewtj/rust-unbound"
readme = "README.md"
build = "build.rs"
keywords = ["dns", "dnssec"]

[dependencies]
libc = "0.2"
mio = { version = "0.6", optional = true }
unbound-sys = { version = "0.6", path = "../unbound-sys" }

[build-dependencies]
tempdir = "0.3.5"
cc = "1.0"
