[package]
name = "unbound"
version = "0.6.0"
authors = ["Andrew Tunnell-Jones <andrew@tj.id.au>"]
license = "BSD-3-Clause"
description = "Wraps libunbound; an implementation of a DNS resolver including cache and DNSSEC validation."
documentation = "https://docs.rs/unbound"
repository = "https://github.com/andrewtj/rust-unbound"
readme = "README.md"
keywords = ["dns", "dnssec"]

[dependencies]
libc = "0.2"
mio = { version = "0.6", optional = true }
unbound-sys = { version = "0.6", path = "../unbound-sys" }

[features]
ub_ctx_set_stub = ["unbound-sys/ub_ctx_set_stub"]
ub_ctx_add_ta_autr = ["unbound-sys/ub_ctx_add_ta_autr"]
ub_ctx_set_tls = ["unbound-sys/ub_ctx_set_tls"]
